# bsa-data

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  instructions.md  pyproject.toml
data/db/: bsa.db
data/raw/app_store/: bath.json  beverley.json  buckinghamshire.json  cambridge.json  chorley.json  coventry.json  cumberland.json  darlington.json  dudley.json  earl-shilton.json  ecology.json  furness.json  hanley.json  harpenden.json  hinckley-rugby.json  leeds.json  leek-united.json  loughborough.json  mansfield.json  market-harborough.json  marsden.json  melton-mowbray.json  monmouthshire.json  national-counties.json  nationwide.json  newbury.json  newcastle.json  nottingham.json  penrith.json  principality.json  progressive.json  saffron.json  scottish.json  skipton.json  stafford-railway.json  suffolk.json  swansea.json  teachers.json  tipton.json  (+3 more)
data/seed/: fairer_finance.json  which_editorial.json
docker/: entrypoint.sh
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: 01_scrape_all.py  02_clean_data.py  03_enrich_data.py  04_compute_metrics.py  05_build_embeddings.py  run_pipeline.py
src/api/: main.py
src/config/: settings.py  societies.py
src/data/: database.py  models.py  schema.sql  schemas.py
src/embeddings/: generator.py  index.py
src/processing/: cleaner.py  enrichment.py  metrics.py
src/scrapers/: __init__.py  appstore.py  base.py  fairer_finance.py  feefo.py  google.py  mse.py  playstore.py  reddit.py  smartmoneypeople.py  trustpilot.py  which.py
(+218 files in other folders)
